--- a/03_media.html
+++ b/03_media.html
@@ -29,6 +29,10 @@
     <audio controls src="media/audio1.mp3" ></audio>
 
 
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/Ej0pbNfq7hA?si=o51x4fryMRgat7nK" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3104.713121184154!2d-6.359736323654553!3d38.907675146096985!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd1426d0f2d36f8f%3A0xa92984cc149de7ca!2sI.E.S.%20Extremadura!5e0!3m2!1ses!2ses!4v1729067749795!5m2!1ses!2ses" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
 
 </body>
 
